crates/plotnik-tests/tests/02-parser/recovery_validation/single_colon_type_annotation.txt
Q = (identifier) @name : Type
------------------ DIAGNOSTICS -------------------
error: capture types use `::`, not `:`
 --> query.ptk:1:24
  |
1 | Q = (identifier) @name : Type
  |                        ^
  |
help: use `::`
  |
1 | Q = (identifier) @name :: Type
  |                         +
